--- a/Notes/View/Base.lproj/Main.storyboard
+++ b/Notes/View/Base.lproj/Main.storyboard
@@ -64,10 +64,17 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="xtc-uZ-NU5"/>
                     </view>
-                    <navigationItem key="navigationItem" title="All Notes" id="hcg-d8-gVT"/>
+                    <navigationItem key="navigationItem" title="All Notes" id="hcg-d8-gVT">
+                        <barButtonItem key="rightBarButtonItem" title="Light" id="hJj-VB-wIQ">
+                            <connections>
+                                <action selector="themeChangeButtonAction:" destination="Zmd-xj-NeQ" id="flW-f6-Sco"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="AddNewButton" destination="orY-QN-IHj" id="82Z-wx-g31"/>
                         <outlet property="filesTable" destination="8cc-gv-SQU" id="F06-1I-GFK"/>
+                        <outlet property="themeChangeButton" destination="hJj-VB-wIQ" id="acN-Gm-sSm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fsG-VG-jru" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -88,7 +95,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter File Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WIc-fz-SjX">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WIc-fz-SjX">
                                 <rect key="frame" x="16" y="88" width="382" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
