--- a/Notes/View/Base.lproj/Main.storyboard
+++ b/Notes/View/Base.lproj/Main.storyboard
@@ -138,7 +138,7 @@
                                     <action selector="themeChangeButtonAction:" destination="Zmd-xj-NeQ" id="flW-f6-Sco"/>
                                 </connections>
                             </barButtonItem>
-                            <barButtonItem systemItem="organize" id="dpT-4e-l14">
+                            <barButtonItem systemItem="bookmarks" id="dpT-4e-l14">
                                 <connections>
                                     <action selector="ChangeFilesViewAction:" destination="Zmd-xj-NeQ" id="Pa1-2D-pAn"/>
                                 </connections>
@@ -164,43 +164,94 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bw0-MC-7re">
-                                <rect key="frame" x="16" y="102" width="343" height="545"/>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v9s-Nd-KqX">
+                                <rect key="frame" x="0.0" y="64" width="375" height="32"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HcX-Ow-RI3">
+                                        <rect key="frame" x="8" y="0.0" width="46" height="32"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="35t-mp-FIh">
+                                        <rect key="frame" x="294" y="0.0" width="46" height="32"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fo0-AU-FSt">
+                                        <rect key="frame" x="164.5" y="0.0" width="46" height="32"/>
+                                        <state key="normal" title="Button"/>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WIc-fz-SjX">
-                                <rect key="frame" x="16" y="64" width="343" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                                <constraints>
+                                    <constraint firstItem="HcX-Ow-RI3" firstAttribute="width" secondItem="v9s-Nd-KqX" secondAttribute="width" multiplier="46:375" id="7Xg-dI-OPH"/>
+                                    <constraint firstItem="Fo0-AU-FSt" firstAttribute="height" secondItem="HcX-Ow-RI3" secondAttribute="height" id="7iV-9T-W4n"/>
+                                    <constraint firstItem="Fo0-AU-FSt" firstAttribute="centerX" secondItem="v9s-Nd-KqX" secondAttribute="centerX" id="AjB-R6-H2o"/>
+                                    <constraint firstItem="Fo0-AU-FSt" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="HcX-Ow-RI3" secondAttribute="trailing" constant="8" symbolic="YES" id="B5B-FU-KOa"/>
+                                    <constraint firstItem="HcX-Ow-RI3" firstAttribute="height" secondItem="v9s-Nd-KqX" secondAttribute="height" multiplier="1:1" id="By1-HF-dUT"/>
+                                    <constraint firstItem="35t-mp-FIh" firstAttribute="width" secondItem="Fo0-AU-FSt" secondAttribute="width" id="JZI-la-5mg"/>
+                                    <constraint firstItem="35t-mp-FIh" firstAttribute="top" secondItem="v9s-Nd-KqX" secondAttribute="top" id="KNl-Pj-0Jm"/>
+                                    <constraint firstItem="35t-mp-FIh" firstAttribute="height" secondItem="Fo0-AU-FSt" secondAttribute="height" id="Qum-F7-FR2"/>
+                                    <constraint firstAttribute="trailing" secondItem="35t-mp-FIh" secondAttribute="trailing" constant="35" id="UWp-kO-6a8"/>
+                                    <constraint firstItem="35t-mp-FIh" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Fo0-AU-FSt" secondAttribute="trailing" constant="8" symbolic="YES" id="Wau-Uz-FGx"/>
+                                    <constraint firstItem="HcX-Ow-RI3" firstAttribute="leading" secondItem="v9s-Nd-KqX" secondAttribute="leading" constant="8" id="aUp-yK-qR0"/>
+                                    <constraint firstItem="Fo0-AU-FSt" firstAttribute="centerY" secondItem="v9s-Nd-KqX" secondAttribute="centerY" id="b2B-MX-Vea"/>
+                                    <constraint firstItem="Fo0-AU-FSt" firstAttribute="width" secondItem="HcX-Ow-RI3" secondAttribute="width" id="cWg-A2-7SV"/>
+                                    <constraint firstItem="HcX-Ow-RI3" firstAttribute="top" secondItem="v9s-Nd-KqX" secondAttribute="top" id="f4o-EO-Koc"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VFI-Qf-Sad">
+                                <rect key="frame" x="0.0" y="104" width="375" height="563"/>
+                                <subviews>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bw0-MC-7re">
+                                        <rect key="frame" x="8" y="58" width="359" height="497"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WIc-fz-SjX">
+                                        <rect key="frame" x="8" y="20" width="359" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="WIc-fz-SjX" secondAttribute="trailing" constant="8" id="ACZ-Be-qrc"/>
+                                    <constraint firstItem="bw0-MC-7re" firstAttribute="leading" secondItem="VFI-Qf-Sad" secondAttribute="leading" constant="8" id="Ea3-EK-DOK"/>
+                                    <constraint firstAttribute="trailing" secondItem="bw0-MC-7re" secondAttribute="trailing" constant="8" id="H7d-bk-Xr5"/>
+                                    <constraint firstAttribute="bottom" secondItem="bw0-MC-7re" secondAttribute="bottom" constant="8" id="c4c-ua-NTc"/>
+                                    <constraint firstItem="bw0-MC-7re" firstAttribute="top" secondItem="WIc-fz-SjX" secondAttribute="bottom" constant="8" id="k7I-vf-8gM"/>
+                                    <constraint firstItem="WIc-fz-SjX" firstAttribute="leading" secondItem="VFI-Qf-Sad" secondAttribute="leading" constant="8" id="xyl-E7-KFS"/>
+                                    <constraint firstItem="WIc-fz-SjX" firstAttribute="top" secondItem="VFI-Qf-Sad" secondAttribute="top" constant="20" id="z2D-kF-2ge"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="WIc-fz-SjX" firstAttribute="top" secondItem="T11-qH-9M0" secondAttribute="top" id="6xO-r2-TUP"/>
-                            <constraint firstItem="T11-qH-9M0" firstAttribute="bottom" secondItem="bw0-MC-7re" secondAttribute="bottom" constant="20" id="9kD-c6-LEM"/>
-                            <constraint firstItem="bw0-MC-7re" firstAttribute="top" secondItem="WIc-fz-SjX" secondAttribute="bottom" constant="8" id="OVc-od-Xdy"/>
-                            <constraint firstItem="bw0-MC-7re" firstAttribute="leading" secondItem="T11-qH-9M0" secondAttribute="leading" constant="16" id="Ssb-y3-E0U"/>
-                            <constraint firstItem="bw0-MC-7re" firstAttribute="top" secondItem="WIc-fz-SjX" secondAttribute="bottom" constant="8" id="WB5-eg-0TU"/>
-                            <constraint firstItem="WIc-fz-SjX" firstAttribute="leading" secondItem="T11-qH-9M0" secondAttribute="leading" constant="16" id="cKK-QA-ky1"/>
-                            <constraint firstItem="T11-qH-9M0" firstAttribute="trailing" secondItem="WIc-fz-SjX" secondAttribute="trailing" constant="16" id="d0p-gX-o5T"/>
-                            <constraint firstItem="T11-qH-9M0" firstAttribute="trailing" secondItem="WIc-fz-SjX" secondAttribute="trailing" constant="16" id="he8-2J-AU0"/>
-                            <constraint firstItem="WIc-fz-SjX" firstAttribute="leading" secondItem="T11-qH-9M0" secondAttribute="leading" constant="16" id="qIQ-l0-w5J"/>
-                            <constraint firstItem="T11-qH-9M0" firstAttribute="trailing" secondItem="bw0-MC-7re" secondAttribute="trailing" constant="16" id="yuI-1z-hVY"/>
+                            <constraint firstItem="v9s-Nd-KqX" firstAttribute="height" secondItem="wa7-ZC-2SP" secondAttribute="height" multiplier="32:667" id="4RC-6Y-63z"/>
+                            <constraint firstItem="v9s-Nd-KqX" firstAttribute="leading" secondItem="T11-qH-9M0" secondAttribute="leading" id="9wv-hE-cfh"/>
+                            <constraint firstItem="VFI-Qf-Sad" firstAttribute="leading" secondItem="wa7-ZC-2SP" secondAttribute="leading" id="LoA-oP-5Tc"/>
+                            <constraint firstItem="VFI-Qf-Sad" firstAttribute="bottom" secondItem="T11-qH-9M0" secondAttribute="bottom" id="NDd-1K-hIt"/>
+                            <constraint firstItem="VFI-Qf-Sad" firstAttribute="top" secondItem="T11-qH-9M0" secondAttribute="top" constant="40" id="Nh0-Jn-Uma"/>
+                            <constraint firstItem="v9s-Nd-KqX" firstAttribute="width" secondItem="wa7-ZC-2SP" secondAttribute="width" multiplier="1:1" id="WgA-1k-rmh"/>
+                            <constraint firstAttribute="trailing" secondItem="VFI-Qf-Sad" secondAttribute="trailing" id="fde-Re-6mf"/>
+                            <constraint firstItem="v9s-Nd-KqX" firstAttribute="top" secondItem="T11-qH-9M0" secondAttribute="top" id="khm-C0-KdQ"/>
+                            <constraint firstItem="v9s-Nd-KqX" firstAttribute="top" secondItem="T11-qH-9M0" secondAttribute="top" id="qKj-2d-zE6"/>
+                            <constraint firstItem="v9s-Nd-KqX" firstAttribute="trailing" secondItem="T11-qH-9M0" secondAttribute="trailing" id="ydi-6j-Z6y"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="T11-qH-9M0"/>
                     </view>
                     <connections>
+                        <outlet property="containerViewTopConst" destination="Nh0-Jn-Uma" id="WGA-lV-2DD"/>
                         <outlet property="contentTextView" destination="bw0-MC-7re" id="WlS-Y0-AQA"/>
-                        <outlet property="contentTextViewBottomConst" destination="9kD-c6-LEM" id="nvp-xu-cVt"/>
+                        <outlet property="contentTextViewBottomConst" destination="c4c-ua-NTc" id="KQn-f9-mF7"/>
                         <outlet property="nameTextField" destination="WIc-fz-SjX" id="jqa-gK-dmT"/>
+                        <outlet property="optionsView" destination="v9s-Nd-KqX" id="zOX-TY-f4j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UpM-Wd-TR7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2792.8000000000002" y="133.5832083958021"/>
+            <point key="canvasLocation" x="2792.578125" y="133.52855051244509"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Uvj-hL-AwM">
